Shared Renderer, Part 6 (#356)
* New: Create shared background manager, move render methods to render lib

* Fix makefile...

* Change: Merge SignalManager & BackgroundManager

* Change: Move folder, rehack makefile

* Fixes....

* More fixes

* Change: Move fog to shared library

* Change: Move load screen to LibRender

* Change: Fix Route Viewer

* Change: Import translations into Route Viewer

Nothing translated other than the loading screen at present

--- a/source/LibRender/LibRender.csproj
+++ b/source/LibRender/LibRender.csproj
@@ -47,10 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backgrounds\Backgrounds.cs" />
     <Compile Include="Camera\Camera.cs" />
     <Compile Include="Camera\CameraAlignment.cs" />
     <Compile Include="Camera\CameraRestrictionMode.cs" />
     <Compile Include="Lighting\Lighting.cs" />
+    <Compile Include="Loading.cs" />
     <Compile Include="MotionBlur\MotionBlurMode.cs" />
     <Compile Include="Objects\ObjectListReference.cs" />
     <Compile Include="Objects\RenderFace.cs" />
