--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -86,6 +86,7 @@
     <Reference Include="CSScriptLibrary">
       <HintPath>..\..\dependencies\CSScriptLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="NUniversalCharDet, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\dependencies\NUniversalCharDet.dll</HintPath>
@@ -120,8 +121,6 @@
       <SubType>Code</SubType>
       <DependentUpon>AI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Game\Events\Events.cs" />
-    <Compile Include="Game\Events\Events.TriggerType.cs" />
     <Compile Include="Game\Events\EventTypes\BackgroundChange.cs" />
     <Compile Include="Game\Events\EventTypes\BrightnessChange.cs" />
     <Compile Include="Game\Events\EventTypes\FogChange.cs" />
