--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -57,6 +57,8 @@
     <Compile Include="SignalManager\SectionTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrentRoute.cs" />
+    <Compile Include="Stations\RouteStation.cs" />
+    <Compile Include="Stations\Station.Stop.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibRender\LibRender.csproj">
