--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -44,7 +44,8 @@
     <Compile Include="BackgroundManager\BackgroundObject.cs" />
     <Compile Include="BackgroundManager\DynamicBackground.cs" />
     <Compile Include="BackgroundManager\StaticBackground.cs" />
-    <Compile Include="Events\BackgroundChangeEvent.cs" />
+    <Compile Include="Events\BackgroundChange.cs" />
+    <Compile Include="Events\FogChange.cs" />
     <Compile Include="Fog.cs" />
     <Compile Include="SignalManager\PreTrain\BogusPreTrainInstruction.cs" />
     <Compile Include="SignalManager\SafetySystems.cs" />
