Change: Move RequestStop base class to RouteManager

--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -54,6 +54,7 @@
     <Compile Include="SignalManager\SectionTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrentRoute.cs" />
+    <Compile Include="Stations\RequestStop.cs" />
     <Compile Include="Stations\RouteStation.cs" />
     <Compile Include="Stations\Station.Stop.cs" />
   </ItemGroup>
