--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Atmosphere.cs" />
     <Compile Include="BackgroundManager\BackgroundObject.cs" />
     <Compile Include="BackgroundManager\DynamicBackground.cs" />
     <Compile Include="BackgroundManager\StaticBackground.cs" />
