--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BackgroundManager\DynamicBackground.cs" />
     <Compile Include="BackgroundManager\StaticBackground.cs" />
     <Compile Include="Events\BackgroundChange.cs" />
+    <Compile Include="Events\DestinationChange.cs" />
     <Compile Include="Events\FogChange.cs" />
     <Compile Include="Fog.cs" />
     <Compile Include="PointOfInterest.cs" />
