--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Events\FogChange.cs" />
     <Compile Include="Events\TrackEnd.cs" />
     <Compile Include="Fog.cs" />
+    <Compile Include="MessageManager\AbstractMessage.cs" />
+    <Compile Include="MessageManager\MessageDirection.cs" />
     <Compile Include="PointOfInterest.cs" />
     <Compile Include="SignalManager\PreTrain\BogusPreTrainInstruction.cs" />
     <Compile Include="SignalManager\SafetySystems.cs" />
