Change: Cross-port MessageManager to RouteViewer, assorted

--- a/source/LibRender/LibRender.csproj
+++ b/source/LibRender/LibRender.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Objects\ObjectListReference.cs" />
     <Compile Include="Objects\RenderFace.cs" />
     <Compile Include="Overlays\Keys.cs" />
+    <Compile Include="Overlays\Markers.cs" />
     <Compile Include="Primitives\Cube.cs" />
     <Compile Include="Primitives\Rectangle.cs" />
     <Compile Include="Renderer.cs" />
