--- a/source/Plugins/Object.DirectX/Object.DirectX.csproj
+++ b/source/Plugins/Object.DirectX/Object.DirectX.csproj
@@ -73,10 +73,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="AfterBuild">
-    <ItemGroup>
-      <Assembly Include="$(TargetDir)$(TargetName).*" />
-    </ItemGroup>
-    <Move SourceFiles="@(Assembly)" DestinationFolder="$(TargetDir)Data\Plugins\" />
-  </Target>
+  <PropertyGroup>
+	  <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
+		  mkdir $(TargetDir)Data\Plugins\
+		  move /Y $(TargetDir)$(TargetName).* $(TargetDir)Data\Plugins\
+	  </PostBuildEvent>
+	  <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
+		  mkdir -p $(TargetDir)Data/Plugins/
+		  mv -f $(TargetDir)$(TargetName).* $(TargetDir)Data/Plugins/
+	  </PostBuildEvent>
+  </PropertyGroup>
 </Project>
