--- a/source/Plugins/OpenBveAts/OpenBveAts.csproj
+++ b/source/Plugins/OpenBveAts/OpenBveAts.csproj
@@ -74,10 +74,14 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
-  <Target Name="AfterBuild">
-    <ItemGroup>
-      <Assembly Include="$(TargetDir)$(TargetName).*" />
-    </ItemGroup>
-    <Move SourceFiles="@(Assembly)" DestinationFolder="$(TargetDir)Data\Plugins\" />
-  </Target>
+  <PropertyGroup>
+	  <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
+		  mkdir $(TargetDir)Data\Plugins\
+		  move /Y $(TargetDir)$(TargetName).* $(TargetDir)Data\Plugins\
+	  </PostBuildEvent>
+	  <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
+		  mkdir -p $(TargetDir)Data/Plugins/
+		  mv -f $(TargetDir)$(TargetName).* $(TargetDir)Data/Plugins/
+	  </PostBuildEvent>
+  </PropertyGroup>
 </Project>
