Change: Convert SpecialTransponderTypes to enum

--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Events\SpeedLimit.cs" />
     <Compile Include="Events\TrackEnd.cs" />
     <Compile Include="Events\Transponder.cs" />
+    <Compile Include="Events\Transponder.Types.cs" />
     <Compile Include="Fog.cs" />
     <Compile Include="MessageManager\AbstractMessage.cs" />
     <Compile Include="MessageManager\MessageDependancy.cs" />
