--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Objects\ObjectTypes\AnimatedObject.AnimatedObjectState.cs" />
     <Compile Include="Objects\ObjectTypes\AnimatedObject.Base.cs" />
     <Compile Include="Objects\ObjectTypes\StaticObject.cs" />
+    <Compile Include="Objects\ObjectTypes\TrackFollowingObject.cs" />
     <Compile Include="Objects\ObjectTypes\UnifiedObject.cs" />
     <Compile Include="Objects\ObjectTypes\WorldObject.cs" />
     <Compile Include="Objects\Parsers\ObjParsers.cs" />
